--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = ["Ken Levasseur <klevasseuriv@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 nmcli = "^0.6.1"
-PyQt5 = "^5.15.6"
+PyQt5 = "5.15.4"
+python-vxi11 = "^0.9"
+python-kasa = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.8b0"
